# autobiota

./: .gitignore  README.md  main.py  pyproject.toml
data/: ZellerG_2014.csv  ZellerG_2014_metadata.csv  ZellerG_2014_preprocessed.csv  sample.csv  sample_preprocessed.csv
outputs/model/: disease_classifier.joblib  evaluation.txt
pipeline/: diversity.py  evaluate.py  plots.py  predict.py  preprocess.py  report.py  train.py
